# plotty

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: demo.py
src/: plotty.py
tests/: conftest.py  test_backend.py  test_kitty.py  test_plotly.py  test_sixel.py  test_viewer_integration.py
